WindGroup Dev/src/objects/LOI_Unit_Template__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Trading_Date__c</fullName>
        <label>Actual Trading Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Area_Sq_Ft__c</fullName>
        <formula>Unit__r.NLA_SQF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area (Sq.Ft)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Authorised_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Authorised Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>LOI_Unit_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charge_Method__c</fullName>
        <label>Charge Method</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Charge_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Day_s_in_expired__c</fullName>
        <formula>(End_Date__c - TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day(s) in expired</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extension_Date__c</fullName>
        <label>Extension Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fit_Out_Date__c</fullName>
        <label>Fit Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Generate_CheckList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate CheckList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Handover_Date__c</fullName>
        <label>Handover Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Handover_Signed_off__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Handover Signed-off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOI_Unit_Template_Name__c</fullName>
        <description>Combination of Unit #; Trade &amp; Sub Trade Cat
To be managed by W/F</description>
        <label>LOI Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <formula>Unit__r.Level__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_End_Date__c</fullName>
        <label>Original End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Person_In_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person In Charge</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>LOI_Unit_Templates1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pre_Termination__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-Termination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Property_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipName>LOI_Unit_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Name_Text__c</fullName>
        <label>Property Name Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Short_Code__c</fullName>
        <formula>Unit__r.Property_Short_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Short Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <formula>Unit__r.Property__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Termination__c</fullName>
        <label>Reason for Termination</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Space_Type_Text__c</fullName>
        <label>Space Type Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Space_Type__c</fullName>
        <label>Space Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Space_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sub_Trade_Category__c</fullName>
        <label>Sub-Trade Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Trade_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Sub_Trade_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Trading_Date__c</fullName>
        <label>Target Trading Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trade_Category__c</fullName>
        <label>Trade Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Space_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Trade_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit</label>
        <referenceTo>Units__c</referenceTo>
        <relationshipName>LOI_Unit_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>LOI Template</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}-{MM}-LUT-{000000}</displayFormat>
        <label>LOI Unit Template No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LOI Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>